refactor: sort key enum alphabetically